Upgrade Spring Boot version and applied minor fixes